made this branch compatible with 1.12-1.16.5